--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <body>
     	<a href="corlate/index.html">Corlate</a>
-	    <a href="nebula/index.html">Corlate</a>
+	    <a href="nebula/index.html">Nebula</a>
     </body>
   </html>
